이미지 교체 및 텍스트 수

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,23 +49,10 @@
 		<h1 class="sect-titles font-Oswald padt60">ABOUT</h1>
 		<div class="container margint60">
 			<div class="row">
+				<h3>WHY MINIVERTISING?</h3>
 			</div>
 		</div>
-		<div class="skills-box margint70">
-			<h1 class="sect-mini-titles margint60">WE ARE REPRESENT SCROLLE WITH FROM YOU</h1>
-			<p class="info margint10">미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.
-매체의 노출량만으로 브랜딩 되던 시기는 지났습니다. 공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다. 그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
-			<div class="container margint60">
-				<div class="row marginb40">
-					<div class="col-lg-8 col-sm-6 bar-box">
-						s
-					</div>
-					<div class="col-lg-4 col-sm-6">
-						s
-					</div>
-				</div>
-			</div>
-		</div>
+
 		<div class="about-parallax font-Oswald">
 			<p class="qtext">MINI IS BIG. <br> MINI IS ORIGNAL.<br> MINI IS FUN.</p>
 		</div>
@@ -119,7 +106,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="about-parallax font-Oswald">
+		<div class="service-parallax font-Oswald">
 			<div class="container margint70">
 				<div class="row marginb60 service-number-box">
 					<div class="col-lg-3 col-sm-6">
@@ -141,7 +128,7 @@
 	<!-- PORTFOLIO -->
 	<div id="portfolio" class="alt-portfolio">
 		<h1 class="sect-titles font-Oswald padt60">PORTFOLIO</h1>
-		<p class="info margint30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ratione harum commodi eum aperiam accusantium quaerat eius iure ut cupiditate esse atque molestias mollitia sit vero animi ipsa quo odio?</p>
+		<p class="info margint30">-</p>
 		<div class="work-list margint60 padb60">
 			<ul class="clearfix">
         <%= render partial: "project", collection: @projects %>
@@ -154,8 +141,7 @@
 	<!-- CONTACT -->
 	<div id="contact">
 		<h1 class="sect-titles font-Oswald padt60">CONTACT</h1>
-		<div class="divide margint40">x</div>
-		<p class="info margint30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ratione harum commodi eum aperiam accusantium quaerat eius iure ut cupiditate esse atque molestias mollitia sit vero animi ipsa quo odio?</p>
+
 		<div class="container padb60">
 			<div class="row margint50 contact-area">
 				<div class="col-lg-4 col-sm-6">
