--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 						<li class="current"><a href="#home">HOME</a></li>
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#services">SERVICE</a></li>
-						<li><a href="#portfolio">PORTFOLIO</a></li>
+						<li><a href="#portfolio">WORK</a></li>
 						<li><a href="#contact">CONTACT</a></li>
 					</ul>
 				</div>
@@ -59,7 +59,8 @@
 	</div>
 	<!-- SERVICES -->
 	<div id="services">
-		<h1 class="sect-titles font-Oswald padt60">SERVICES</h1>
+		<h1 class="sect-titles font-Oswald padt80">SERVICES</h1>
+		<p class="sub_title">디자인 제작과 PD프러덕션 서비스를 통합해 <br>커뮤니케이션 기획부터 최종 제작까지 토탈서비스를 제공합니다.</p>
 
 		<div class="container margint70">
 			<div class="row marginb60 service-number-box">
@@ -127,7 +128,7 @@
 	</div>
 	<!-- PORTFOLIO -->
 	<div id="portfolio" class="alt-portfolio">
-		<h1 class="sect-titles font-Oswald padt60">PORTFOLIO</h1>
+		<h1 class="sect-titles font-Oswald padt60">WORK</h1>
 		<p class="info margint30">-</p>
 		<div class="work-list margint60 padb60">
 			<ul class="clearfix">
