--- a/public/css/scrolle-reset.css
+++ b/public/css/scrolle-reset.css
@@ -25,6 +25,7 @@ ul{margin:0;padding:0;list-style-type:none;}
 .padt20{padding-top:20px;}
 .padt50{padding-top:50px;}
 .padt60{padding-top:60px;}
+.padt80{padding-top:80px;}
 .pad5{padding:5px;}
 .pad10{padding:10px;}
 .pad30{padding:30px;}
