--- a/public/css/main.css
+++ b/public/css/main.css
@@ -94,6 +94,10 @@ body {
 	font-weight: 300;
 }
 
+.sub_title{
+	padding-top:20px;
+}
+
 .sect-mini-titles {
 	font-size: 30px;
 	color: #000;
@@ -178,7 +182,7 @@ body {
 	top: 0;
 	left: 0;
 	z-index: 999999;
-	background: rgba(255,255,255,0.9);
+	background: rgba(0,0,0,0.9);
 	height: 60px;
 }
 
@@ -212,7 +216,7 @@ body {
 }
 
 #menu2 #nav li.current a {
-	color: #000;
+	color: #eee;
 }
 
 /* MENU */
@@ -855,7 +859,7 @@ body {
 
 /* SERVICES SECTION */
 #services p {
-	color: #fff;
+	color: #222;
 }
 
 .services-list {
