맵 위치 변경 / BG 이미지 변

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -144,21 +144,18 @@
 		<h1 class="sect-titles font-Oswald padt60">CONTACT</h1>
 
 		<div class="container padb60">
+			
+			<div id="map"></div>
+			
 			<div class="row margint50 contact-area">
 				<div class="col-lg-4 col-sm-6">
-					<div class="tab-style-3">
-						<ul class="tabbed-contact contact-tab clearfix">
-							<li class="active font-Oswald"><a href="#tab1s">MAPS</a></li>
-						</ul>
-						<div class="tab-content tab-style2 margint30">
-							<div class="tab-pane fade in active" id="tab1s">
-								<div id="map"></div>
-							</div>
-							<div class="tab-pane fade" id="tab2s">
-								<div class="twitterfeed"></div>
-							</div>
-						</div>
-					</div>
+					<ul class="contact_detail">
+						<li>ADDRESS 서울특별시 서초구 방배동 856-1</li>
+						<li>PHONE 02-532-2475</li>
+						<li>FAX 02-532-2493</li>
+						<li>MAIL contact@minivertising.kr</li>
+					</ul>
+					
 				</div>
 				<div class="col-lg-8 col-sm-6 contact-form-area">
 					<h3 class="font-Oswald">CONTACT WITH US</h3>
