이미지/텍스트수

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,10 +28,7 @@
 	<!-- HOME -->
 	<div id="home" class="intro">
 		<div class="pos-center">
-			<div class="logo">
-				
-			</div>
-			<div>
+			<div class="intro_text">
 				MINI + ADVERTISING
 			</div>
 			<div id="slider" class="margint50 font-Oswald flexslider" style="display:none;">
@@ -46,15 +43,40 @@
 	</div>
 	<!-- ABOUT -->
 	<div id="about">
-		<h1 class="sect-titles font-Oswald padt60">ABOUT</h1>
+		<div class="about-parallax font-Oswald">
+			<h1 class="qtext sect-titles ">WHY MINIVERTISING?</h1>
+		</div>		
 		<div class="container margint60">
-			<div class="row">
-				<h3>WHY MINIVERTISING?</h3>
+			<div class="row col-sm-6">
+				WHY MINIVERTISING?
+			</div>			
+			<div class="row col-sm-6">
+				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4>
+				<p>미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.<br>
+				    매체의 노출량만으로 브랜딩 되던 시기는 지났습니다.<br> 
+					공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다.<br> 
+					그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
+			</div>
+		</div>
+		<div class="container margint60">
+			<div class="row col-sm-6">
+				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4>
+				<p>미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.<br>
+				    매체의 노출량만으로 브랜딩 되던 시기는 지났습니다.<br> 
+					공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다.<br> 
+					그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
+			</div>
+			<div class="row col-sm-6">
+				<h4>새로운 광고가 필요한 이유가,<br> 미니버타이징이 탄생된 이유입니다.</h4>
+				<p>미디어의 접점 채널은 다양해졌지만
+그안에 생명력 있는 컨텐츠는 찾아보기 힘듭니다. 새로워진 매체에 적합한 새로운 광고가 필요합니다.<br>
+미니버타이징은 추구하는 광고는 놀라움이며 관계이며 하나의 사건을 만들기 위해 탄생했습니다.
+				</p>
 			</div>
 		</div>
 
 		<div class="about-parallax font-Oswald">
-			<p class="qtext">MINI IS BIG. <br> MINI IS ORIGNAL.<br> MINI IS FUN.</p>
+			<p class="qtext">THE NEXT IS</p>
 		</div>
 	</div>
 	<!-- SERVICES -->
@@ -109,20 +131,12 @@
 		</div>
 		<div class="service-parallax font-Oswald">
 			<div class="container margint70">
-				<div class="row marginb60 service-number-box">
-					<div class="col-lg-3 col-sm-6">
-						TEAM
-					</div>
-					<div class="col-lg-3 col-sm-6">
-						TEAM
-					</div>
-					<div class="col-lg-3 col-sm-6">
-						TEAM
-					</div>
-					<div class="col-lg-3 col-sm-6">
-						TEAM
-					</div>
-				</div>
+				<p class="qtext">
+					MINI IS BIG. <br>
+					MINI IS ORIGIAL. <br>
+					MINI IS FUN.
+				</p>
+				
 			</div>
 		</div>
 	</div>
