--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,31 +48,15 @@
 		</div>		
 		<div class="container margint60">
 			<div class="row col-sm-6">
-				WHY MINIVERTISING?
-			</div>			
+				
+			</div>	
 			<div class="row col-sm-6">
-				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4>
+				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4><br>
 				<p>미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.<br>
 				    매체의 노출량만으로 브랜딩 되던 시기는 지났습니다.<br> 
 					공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다.<br> 
 					그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
-			</div>
-		</div>
-		<div class="container margint60">
-			<div class="row col-sm-6">
-				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4>
-				<p>미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.<br>
-				    매체의 노출량만으로 브랜딩 되던 시기는 지났습니다.<br> 
-					공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다.<br> 
-					그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
-			</div>
-			<div class="row col-sm-6">
-				<h4>새로운 광고가 필요한 이유가,<br> 미니버타이징이 탄생된 이유입니다.</h4>
-				<p>미디어의 접점 채널은 다양해졌지만
-그안에 생명력 있는 컨텐츠는 찾아보기 힘듭니다. 새로워진 매체에 적합한 새로운 광고가 필요합니다.<br>
-미니버타이징은 추구하는 광고는 놀라움이며 관계이며 하나의 사건을 만들기 위해 탄생했습니다.
-				</p>
-			</div>
+			</div>		
 		</div>
 
 		<div class="about-parallax font-Oswald">
