--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -156,7 +156,7 @@
 					
 				</div>
 				<div class="col-lg-8 col-sm-6 contact-form-area">
-					<h3 class="font-Oswald">CONTACT WITH US</h3>
+					<h3 class="font-Oswald">Let's Talk</h3>
 					<form class="margint20" action="#" method="post">
 						<div class="row">
 							<div class="col-lg-6">
