parallax 이미지 위치 변

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,11 +44,23 @@
 	<!-- ABOUT -->
 	<div id="about">
 		<div class="about-parallax font-Oswald">
-			<h1 class="qtext sect-titles ">WHY MINIVERTISING?</h1>
+			<h1 class="qtext sect-titles ">ABOUT</h1>
 		</div>		
 		<div class="container margint60">
 			<div class="row col-sm-6">
-				
+				<h3>WHY MINIVERTISING?</h3>
+			</div>	
+			<div class="row col-sm-6">
+				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4><br>
+				<p>미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.<br>
+				    매체의 노출량만으로 브랜딩 되던 시기는 지났습니다.<br> 
+					공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다.<br> 
+					그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
+			</div>		
+		</div>
+		<div class="container margint60">
+			<div class="row col-sm-6">
+				<h3>NEXT IS</h3>
 			</div>	
 			<div class="row col-sm-6">
 				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4><br>
@@ -59,13 +71,12 @@
 			</div>		
 		</div>
 
-		<div class="about-parallax font-Oswald">
-			<p class="qtext">THE NEXT IS</p>
-		</div>
 	</div>
 	<!-- SERVICES -->
 	<div id="services">
-		<h1 class="sect-titles font-Oswald padt80">SERVICES</h1>
+		<div class="service-parallax font-Oswald">
+			<h1 class="qtext sect-titles ">SERVICE</h1>
+		</div>	
 		<p class="sub_title">디자인 제작과 PD프러덕션 서비스를 통합해 <br>커뮤니케이션 기획부터 최종 제작까지 토탈서비스를 제공합니다.</p>
 
 		<div class="container margint70">
