--- a/public/css/scrolle.responsive.css
+++ b/public/css/scrolle.responsive.css
@@ -12,7 +12,7 @@
 #menu-alt-wrapper #nav li{float:none;width:100%;background-color:#020402;border-bottom:1px solid #1f1f1f;padding-left:25px;padding-bottom:20px;}
 #menu-alt-wrapper.menu-white #nav li a{color:#FFF;}
 [class*="col-"]{padding-top:15px;padding-bottom:15px;}
-.qtext{padding:50px 5% 0 5%;}
+.qtext{padding:50px 5% 50px 5%;}
 .qname{padding-bottom:50px;}
 .work-list{margin-left:0px;width:100% !important;}
 #client-list{padding:0 100px;margin-top:30px !important;}
