--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -6,12 +6,12 @@ $(function () {
   $('#big_image').fileupload({
     dataType: 'json',
     add: function (e, data) {
-      var project_id = $('#project_id').val();
-      data.formData = {project_id: project_id};
-      data.context = $('<p/>').text('Uploading...').appendTo(document.body);
       data.submit();
     },
     done: function (e, data) {
+      var picture_id = data.result.project_picture_id;
+      var picture_ids = $('#project_picture_ids').val() + ',' + picture_id
+      $('#project_picture_ids').val(picture_ids);
       $.each(data.result.files, function (index, file) {
         $('<p/>').text(file.name).appendTo("#project_big");
       });
@@ -20,11 +20,10 @@ $(function () {
 });
 </script>
 <%= simple_form_for([:admin, @project]) do |f| %>
-  <%= hidden_field_tag :project_id, :value => @project.id, id: "project_id" %>
+  <%= hidden_field_tag :project_picture_ids %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
-
       <ul>
       <% @project.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -34,99 +33,99 @@ $(function () {
   <% end %>
   <div class="row-fluid">
       <!-- block -->
-      <div class="block">
-          <div class="navbar navbar-inner block-header">
-              <div class="muted pull-left">프로젝트 "<%= @project.title %>" 정보 수정</div>
+      <div class="block">            
+        <div class="navbar navbar-inner block-header">
+          <div class="muted pull-left">프로젝트 "<%= @project.title %>" 정보 수정</div>
+        </div>
+        <div class="block-content collapse in">
+          <div class="span12">
+             <form class="form-horizontal">
+              <fieldset>
+                <div class="control-group">
+                  <label class="control-label">썸네일(510x268)</label>
+                  <div>
+                    <%= image_tag @project.project_thumbnail unless @project.project_thumbnail.nil? %>
+                  </div>
+                  <div class="controls">
+                    <div class="uploader hover" id="project_thumbnail">
+                      <%= f.file_field :project_thumbnail %>
+                    </div>
+                    <span class="help-inline">리스트의 썸네일 표시.</span>
+                  </div>
+                </div>
+                  <div class="control-group">
+                    <label class="control-label">원래크기(1170x615)</label>
+                    <% @project.project_pictures.each do |picture| %>
+                      <div class="project_big_thumb" picture-id="<%= picture.id %>">
+                        <p>
+                          <%= image_tag picture.project_big.url(:thumb) %>
+                        </p>
+                        <p>
+                          <%= 
+                            link_to 'Destroy', picture, remote: :true, method: :delete, 
+                              class: "project_picture_destroy", data: { confirm: '레알 삭제?' } 
+                            %>
+                        </p>
+                      </div>
+                    <% end %>
+                    <div class="controls">
+                      <div class="uploader hover" id="project_big">
+                        <%= file_field_tag :project_big, id: "big_image", :multiple => true, "data-url" => image_upload_projects_path(:json) %>
+                        <p></p>
+                      </div>
+                      <span class="help-inline">메인페이지 표시. (복수 이미지 업로드 가능)</span>
+                    </div>
+                  </div>
+                  <%# end %>
+                <div class="control-group">
+                  <label class="control-label" for="focusedInput">제목</label>
+                  <div class="controls">
+                    <%= f.text_field :title, id: "focusdInput", class: "input-xlarge focused" %>
+                  </div>
+                </div>
+                
+                <div class="control-group">
+                  <label class="control-label" for="focusedInput">카테고리</label>
+                  <div class="controls">
+                    <%= f.text_field :category, id: "focusdInput", class: "input-xlarge focused" %>
+                  </div>
+                </div>
+                
+                <div class="control-group">
+                  <label class="control-label" for="focusedInput">클라이언트</label>
+                  <div class="controls">
+                    <%= f.text_field :client, id: "focusdInput", class: "input-xlarge focused" %>
+                  </div>
+                </div>
+                
+                <div class="control-group">
+                  <label class="control-label" for="focusedInput">프로젝트 제작일</label>
+                  <div class="controls">
+                    <%= f.input :made_at, id: "focusdInput", class: "input-xlarge focused" %>
+                  </div>
+                </div>
+                
+                <div class="control-group">
+                  <label class="control-label">내용</label>
+                  <div class="controls">
+                    <%= f.text_area :description, id: "focusdInput", class: "input-xlarge focused", style: "width: 600px; height: 200px" %>  
+                    <span class="help-inline">HTML 사용 가능.</span>
+                  </div>
+                </div>
+                <div class="control-group">
+                  <label class="control-label" for="focusedInput">프로젝트 사이트 주소</label>
+                  <div class="controls">
+                    <%= f.text_field :website_link, id: "focusdInput", class: "input-xlarge focused" %>
+                  </div>
+                </div>
+                <div class="form-actions">
+                  <%= f.submit class: "btn btn-primary"  %>
+                  <%= link_to "취소", admin_path, class: "btn"%>
+                </div>
+              </fieldset>
+            </form>
           </div>
-          <div class="block-content collapse in">
-              <div class="span12">
-                   <form class="form-horizontal">
-                    <fieldset>
-                      <div class="control-group">
-                        <label class="control-label">썸네일(510x268)</label>
-                        <div>
-                          <%= image_tag @project.project_thumbnail unless @project.project_thumbnail.nil? %>
-                        </div>
-                        <div class="controls">
-                          <div class="uploader hover" id="project_thumbnail">
-                            <%= f.file_field :project_thumbnail %>
-                          </div>
-                          <span class="help-inline">리스트의 썸네일 표시.</span>
-                        </div>
-                      </div>
-                        <div class="control-group">
-                          <label class="control-label">원래크기(1170x615)</label>
-                          <% @project.project_pictures.each do |picture| %>
-                            <div class="project_big_thumb" picture-id="<%= picture.id %>">
-                              <p>
-                                <%= image_tag picture.project_big.url(:thumb) %>
-                              </p>
-                              <p>
-                                <%= 
-                                  link_to 'Destroy', picture, remote: :true, method: :delete, 
-                                    class: "project_picture_destroy", data: { confirm: '레알 삭제?' } 
-                                  %>
-                              </p>
-                            </div>
-                          <% end %>
-                          <div class="controls">
-                            <div class="uploader hover" id="project_big">
-                              <%= file_field_tag :project_big, id: "big_image", :multiple => true, "data-url" => image_upload_projects_path(:json) %>
-                              <p></p>
-                            </div>
-                            <span class="help-inline">메인페이지 표시. (복수 이미지 업로드 가능)</span>
-                          </div>
-                        </div>
-                        <%# end %>
-                      <div class="control-group">
-                        <label class="control-label" for="focusedInput">제목</label>
-                        <div class="controls">
-                          <%= f.text_field :title, id: "focusdInput", class: "input-xlarge focused" %>
-                        </div>
-                      </div>
-                      
-                      <div class="control-group">
-                        <label class="control-label" for="focusedInput">카테고리</label>
-                        <div class="controls">
-                          <%= f.text_field :category, id: "focusdInput", class: "input-xlarge focused" %>
-                        </div>
-                      </div>
-                      
-                      <div class="control-group">
-                        <label class="control-label" for="focusedInput">클라이언트</label>
-                        <div class="controls">
-                          <%= f.text_field :client, id: "focusdInput", class: "input-xlarge focused" %>
-                        </div>
-                      </div>
-                      
-                      <div class="control-group">
-                        <label class="control-label" for="focusedInput">프로젝트 제작일</label>
-                        <div class="controls">
-                          <%= f.input :made_at, id: "focusdInput", class: "input-xlarge focused" %>
-                        </div>
-                      </div>
-                      
-                      <div class="control-group">
-                        <label class="control-label">내용</label>
-                        <div class="controls">
-                          <%= f.text_area :description, id: "focusdInput", class: "input-xlarge focused", style: "width: 600px; height: 200px" %>  
-                          <span class="help-inline">HTML 사용 가능.</span>
-                        </div>
-                      </div>
-                      <div class="control-group">
-                        <label class="control-label" for="focusedInput">프로젝트 사이트 주소</label>
-                        <div class="controls">
-                          <%= f.text_field :website_link, id: "focusdInput", class: "input-xlarge focused" %>
-                        </div>
-                      </div>
-                      <div class="form-actions">
-                        <%= f.submit class: "btn btn-primary"  %>
-                        <%= link_to "취소", admin_path, class: "btn"%>
-                      </div>
-                    </fieldset>
-                  </form>
-              </div>
-          </div>
+        </div>
       </div>
       <!-- /block -->
   </div>
