--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -267,35 +267,38 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-8 col-sm-6 contact-form-area">
-					<h3 class="font-Oswald">CONTACT WITH US</h3>
-					<form class="margint20" action="#" method="post">
-						<div class="row">
-							<div class="col-lg-6">
-								<input class="inptname" type="text" name="name" placeholder="YOUR NAME" />
-							</div>
-							<div class="col-lg-6">
-								<input class="inptmail" type="text" name="name" placeholder="E-MAIL ADDRESS" />
-							</div>
-						</div>
-						<div class="row margint20">
-							<div class="col-lg-6">
-								<input class="inptcom" type="text" name="name" placeholder="SUBJECT" />
-							</div>
-							<div class="col-lg-6">
-								<input class="inptcom" type="text" name="name" placeholder="CATEGORY" />
-							</div>
-						</div>
-						<div class="row margint20">
-							<div class="col-lg-12">
-								<textarea></textarea>
-							</div>
-						</div>
-						<div class="pull-right submit-wrapper">
-							<input class="submit-button margint20" type="submit" value="SEND NOW" />
-						</div>
-					</form>
-				</div>
+        <div class="col-lg-8 col-sm-6 contact-form-area">
+          <h3 class="font-Oswald">CONTACT WITH US</h3>
+          <div class="pull-left submit-wrapper">
+            <input class="submit-button margint20" type="submit" value="SEND NOW" />
+          </div>
+          <!-- <form class="margint20" action="#" method="post">
+            <div class="row">
+              <div class="col-lg-6">
+                <input class="inptname" type="text" name="name" placeholder="YOUR NAME" />
+              </div>
+              <div class="col-lg-6">
+                <input class="inptmail" type="text" name="name" placeholder="E-MAIL ADDRESS" />
+              </div>
+            </div>
+            <div class="row margint20">
+              <div class="col-lg-6">
+                <input class="inptcom" type="text" name="name" placeholder="SUBJECT" />
+              </div>
+              <div class="col-lg-6">
+                <input class="inptcom" type="text" name="name" placeholder="CATEGORY" />
+              </div>
+            </div>
+            <div class="row margint20">
+              <div class="col-lg-12">
+                <textarea></textarea>
+              </div>
+            </div>
+            <div class="pull-right submit-wrapper">
+              <input class="submit-button margint20" type="submit" value="SEND NOW" />
+            </div>
+          </form> -->
+        </div>
 			</div>
 		</div>
 	</div>
