--- a/public/css/scrolle.responsive.css
+++ b/public/css/scrolle.responsive.css
@@ -26,6 +26,9 @@
 }
 
 @media only screen and (max-width: 767px) {
+  #cboxPrevious{display:none !important; }
+  #cboxNext{display:none !important;}
+  
   #menu{position:relative;width:100%;}
   #menu-alt-wrapper{position:relative;width:100%;height:0;background:transparent;}
   #menu-alt-wrapper .container{max-width:100% !important;padding:0;}
