이미지 업데이

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -89,7 +89,7 @@
 		<div class="container margint70">
 			<div class="row marginb60 service-number-box">
 				<div class="col-lg-3 col-sm-6">
-					
+					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">ONLINE PROMOTION</h3>
 					<ul>
 						<li>프로모션기획/제작</li>
@@ -100,7 +100,7 @@
 					
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					
+					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">VIRAL&TUTORIAL FILM</h3>
 					<ul>
 						<li>프로모션기획/제작</li>
@@ -110,7 +110,7 @@
 					</ul>
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					
+					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">FACEBOOK CAMPAIGN</h3>
 					<ul>
 						<li>프로모션기획/제작</li>
@@ -120,7 +120,7 @@
 					</ul>
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					
+					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">WEBSITE</h3>
 					<ul>
 						<li>프로모션기획/제작</li>
