--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,7 @@ body {
 
 .pos-center {
 	text-align: center;
+	height:inherit;
 }
 
 .pos-left {
@@ -94,9 +95,7 @@ body {
 	font-weight: 300;
 }
 
-.sub_title{
-	padding-top:20px;
-}
+
 
 .sect-mini-titles {
 	font-size: 30px;
@@ -251,8 +250,11 @@ body {
 
 .intro_text{
 	font-size:50px;
-	padding-top:400px;
 	font-weight:400;
+	top:50%;
+	text-align:center;
+	width:100%;
+	position:absolute;
 }
 
 .form-intro {
@@ -725,7 +727,6 @@ body {
 }
 
 #about .container{
-	padding-bottom:80px;
 	text-align:left;
 }
 
@@ -768,12 +769,11 @@ body {
 }
 
 .work-list ul li .mask {
-	padding-top: 80px;
 	width: 100%;
 	height:  100%;
 	position:  absolute;
 	overflow:  hidden;
-	top: 0;
+	top: 50%;
 	left: 0;
 	background-color:  rgba(0,0,0, 0.5);
 	-webkit-transition:  all 0.5s linear;
@@ -876,7 +876,12 @@ body {
 
 /* SERVICES SECTION */
 #services p {
-	color: #222;
+	text-align:left;
+}
+
+#services .sub_title{
+	padding-top:20px;
+	text-align:center;
 }
 
 .services-list {
