768px 이하에서 projects 이미지 슬라이드 해제.

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,7 +1,7 @@
 <script>
 $(function () {
   $('.project_picture_destroy').bind('ajax:complete', function() {
-    $(this).parent().parent().hide();
+    $(this).parent().parent().d;
   });
   $('#big_image').fileupload({
     dataType: 'json',
