--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -155,41 +155,21 @@
 			<div id="map" class="maps"></div>
 			
 			<div class="row margint50 contact-area">
-				<div class="col-lg-4 col-sm-6">
+				<div class="col-lg-12 col-sm-12">
 					<ul class="contact_detail">
 						<li>ADDRESS 서울특별시 서초구 방배동 856-1</li>
 						<li>PHONE 02-532-2475</li>
 						<li>FAX 02-532-2493</li>
 						<li>MAIL contact@minivertising.kr</li>
 					</ul>
-					
 				</div>
-				<div class="col-lg-8 col-sm-6 contact-form-area">
-					<h3 class="font-Oswald">Let's Talk</h3>
+      </div>
+      <div class="row contact-area">
+				<div class="col-lg-12 col-sm-12 contact-form-area">
 					<form class="margint20" action="#" method="post">
-						<div class="row">
-							<div class="col-lg-6">
-								<input class="inptname" type="text" name="name" placeholder="YOUR NAME" />
-							</div>
-							<div class="col-lg-6">
-								<input class="inptmail" type="text" name="name" placeholder="E-MAIL ADDRESS" />
-							</div>
-						</div>
-						<div class="row margint20">
-							<div class="col-lg-6">
-								<input class="inptcom" type="text" name="name" placeholder="SUBJECT" />
-							</div>
-							<div class="col-lg-6">
-								<input class="inptcom" type="text" name="name" placeholder="CATEGORY" />
-							</div>
-						</div>
-						<div class="row margint20">
-							<div class="col-lg-12">
-								<textarea></textarea>
-							</div>
-						</div>
 						<div class="pull-right submit-wrapper">
-							<input class="submit-button margint20" type="submit" value="SEND NOW" />
+              <%= link_to "미니버타이징에 문의하기", contact_path, class: "submit-button margint20" %>
+							<!-- <input class="submit-button margint20" type="submit" value="미니버타이징에 문의" /> -->
 						</div>
 					</form>
 				</div>
