--- a/public/css/scrolle.responsive.css
+++ b/public/css/scrolle.responsive.css
@@ -35,7 +35,21 @@
   .h-logo{display:none;}
   .menu-alt{float:none !important;}
   .nav-collapse.opened{max-height:9999px;}
-  .nav-toggle{position:absolute;top:0px;left:50%;margin-left:-89px;width:178px;height:45px;text-indent:-9999px;overflow:hidden;display:block;background:#f43c12;background:url(../img/mobile-nav-icon.png) #000 no-repeat center center;}
+  .nav-toggle{
+    position:absolute;
+    top:0px;
+/*    left:50%;*/
+/*    margin-left:-89px;*/
+    width:100%;
+    height:45px;
+    padding-left: 12px;
+/*    text-indent:-9999px;*/
+    overflow:hidden;
+    display:block;
+    background:#f43c12;
+    background:url(../img/mobile-nav-icon.png) #000 no-repeat right 12px center;
+/*    background-position: 10px 0;*/
+  }
   .js .nav-collapse{max-height:0;position:absolute;display:block;overflow:hidden;}
   #nav li.sectionLink{width:100%;}
   #nav li.sectionLink a span{font-size:16px;}
