--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,7 +42,7 @@
 				<h3>WHY MINIVERTISING?</h3>
 			</div>	
 			<div class="row col-sm-6">
-				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4><br>
+				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4>
 				<p>미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.<br>
 				    매체의 노출량만으로 브랜딩 되던 시기는 지났습니다.<br> 
 					공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다.<br> 
@@ -54,19 +54,21 @@
 				<h3>NEXT IS</h3>
 			</div>	
 			<div class="row col-sm-6">
-				<h4>소셜시대,<br>미디어는 공평해졌습니다.</h4><br>
-				<p>미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.<br>
-				    매체의 노출량만으로 브랜딩 되던 시기는 지났습니다.<br> 
-					공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다.<br> 
-					그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
+				<h4>새로운 광고가 필요한 이유가,<br> 미니버타이징이 탄생된 이유입니다.</h4>
+				<p>
+					미디어의 접점 채널은 다양해졌지만<br>
+					그안에 생명력 있는 컨텐츠는 찾아보기 힘듭니다.<br>
+					새로워진 매체에 적합한 새로운 광고가 필요합니다.<br>
+					미니버타이징은 추구하는 광고는 놀라움이며 관계이며<br>
+					하나의 사건을 만들기 위해 탄생했습니다.
+				</p>
 			</div>		
 		</div>
 		<div class="about-parallax font-Oswald">
 			<div class="container margint70">
 				<p class="qtext">
-					MINI IS BIG. <br>
-					MINI IS ORIGIAL. <br>
-					MINI IS FUN.
+					WE FOCUS ON CONTENT. <br>
+					IT IS NEW ADVERTISING.
 				</p>
 				
 			</div>
@@ -153,6 +155,24 @@
 		<div class="container padb60">
 			
 			<div id="map" class="maps"></div>
+			<div class="row marginb60 service-number-box">
+				<div class="col-lg-3 col-sm-6">
+					<h3 class="font-Oswald margint20">ADDRESS</h3>
+					<p>서울특별시 서초구 방배동 856-1</p>					
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<h3 class="font-Oswald margint20">PHONE / FAX</h3>
+					<p>02-532-2475 / 02-532-2493</p>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<h3 class="font-Oswald margint20">MAIL</h3>
+					<p>contact@minivertising.kr</p>					
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<h3 class="font-Oswald margint20">PROJECT</h3>
+					<p>REQUEST</p>					
+				</div>
+			</div>
 			
 			<div class="row margint50 contact-area">
 				<div class="col-lg-4 col-sm-6">
