버튼 텍스트수

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -170,7 +170,7 @@
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<h3 class="font-Oswald margint20">PROJECT</h3>
-					<p>REQUEST</p>					
+					<p><%= link_to "REQUEST", contact_path, class: "submit-button margint20" %></p>					
 				</div>
 			</div>
 			
