--- a/public/css/scrolle.responsive.css
+++ b/public/css/scrolle.responsive.css
@@ -46,9 +46,7 @@
 /*    text-indent:-9999px;*/
     overflow:hidden;
     display:block;
-    background:#f43c12;
     background:url(../img/mobile-nav-icon.png) #000 no-repeat right 12px center;
-/*    background-position: 10px 0;*/
   }
   .js .nav-collapse{max-height:0;position:absolute;display:block;overflow:hidden;}
   #nav li.sectionLink{width:100%;}
@@ -99,7 +97,12 @@
     only screen and (-o-min-device-pixel-ratio: 3/2),
     only screen and (min--moz-device-pixel-ratio: 1.5),
     only screen and (min-device-pixel-ratio: 1.5) {
-  .nav-toggle {background:url(../img/mobile-nav-icon@2x.png) #000 no-repeat center center;background-size:22px 19px;}
+  .nav-toggle {
+    background:url(../img/mobile-nav-icon.png) #000 no-repeat right 12px center;
+  }
+  .intro_text{
+    padding-top: 30%;
+  }
   #cboxPrevious{background:url(../img/prjct-prev@2x.png) no-repeat;background-size:17px 28px;}
   #cboxNext{background:url(../img/prjct-next@2x.png) no-repeat;background-size:17px 28px;}
   #cboxClose{background:url(../img/prjct-close@2x.png) no-repeat;background-size:65px 65px;}
