--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -173,34 +173,13 @@
 					<p><%= link_to "REQUEST", contact_path, class: "submit-button margint20" %></p>					
 				</div>
 			</div>
-			
-			<div class="row margint50 contact-area">
-				<div class="col-lg-12 col-sm-12">
-					<ul class="contact_detail">
-						<li>ADDRESS 서울특별시 서초구 방배동 856-1</li>
-						<li>PHONE 02-532-2475</li>
-						<li>FAX 02-532-2493</li>
-						<li>MAIL contact@minivertising.kr</li>
-					</ul>
-				</div>
       </div>
-      <div class="row contact-area">
-				<div class="col-lg-12 col-sm-12 contact-form-area">
-					<form class="margint20" action="#" method="post">
-						<div class="pull-right submit-wrapper">
-              <%= link_to "미니버타이징에 문의하기", contact_path, class: "submit-button margint20" %>
-							<!-- <input class="submit-button margint20" type="submit" value="미니버타이징에 문의" /> -->
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
 	</div>
 	<!-- FOOTER -->
 	<div id="footer">
+		<h5 class="font-Oswald">MINI IS BIG. MINI IS ORIGINAL. MINI IS FUN.</h5>
 		<div class="container">
-			<h5 class="margint10">MINI IS BIG. MINI IS ORIGINAL. MINI IS FUN.</h5>
-			<h5 class="margint10">MINIVERTISING Copyright ©</h5>
+			<p class="margint10">MINIVERTISING Copyright ©</p>
 		</div>
 	</div>
 </div>
