--- a/app/views/home/_project.html.erb
+++ b/app/views/home/_project.html.erb
@@ -1,8 +1,17 @@
 <li>
-  <%= link_to project_path(project.id), class: "iframe portfolio-group cboxElement", title: "" do %>
-    <%= image_tag project.project_thumbnail.url, class: "img-responsive"%>
-		<div class="mask">
-			<h2 class="font-Oswald"><%= project.title %></h2>
-		</div>
+  <% if is_mobile? %>
+    <%= link_to project_path(project.id), class: "project-group", title: "" do %>
+      <%= image_tag project.project_thumbnail.url, class: "img-responsive"%>
+  		<div class="mask">
+  			<h2 class="font-Oswald">모바일 <%= project.title %></h2>
+  		</div>
+    <% end %>
+  <% else %>
+    <%= link_to project_path(project.id), class: "iframe portfolio-group cboxElement", title: "" do %>
+      <%= image_tag project.project_thumbnail.url, class: "img-responsive"%>
+  		<div class="mask">
+  			<h2 class="font-Oswald"><%= project.title %></h2>
+  		</div>
+    <% end %>
   <% end %>
 </li>
