--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -179,7 +179,7 @@
 	<div id="footer">
 		<h5 class="font-Oswald">MINI IS BIG. MINI IS ORIGINAL. MINI IS FUN.</h5>
 		<div class="container">
-			<p class="margint10">MINIVERTISING Copyright ©</p>
+			<p class="margint10">© MINIVERTISING 2013. ALL RIGHTS RESERVED.</p>
 		</div>
 	</div>
 </div>
