--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,10 @@
 <div id="wrapper">
 	<div class="container pos-center projects">
+    <%# if is_mobile? %>
+      <div class="close_button">
+        <img src="/img/prjct-close.png"/>
+      </div>
+    <%# end %>
 		<h2 class="font-Oswald margint60"><%= @project.title %></h2>
 		<p class="margint5"><%= @project.sub_title %></p>
 		<div class="project-slider margint20">
