서비스 영역 이미지 빼

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,7 +83,6 @@
 		<div class="container margint70">
 			<div class="row marginb60 service-number-box">
 				<div class="col-lg-3 col-sm-6">
-					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">ONLINE PROMOTION</h3>
 					<ul>
 						<li>프로모션기획/제작</li>
@@ -94,33 +93,28 @@
 					
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">VIRAL&TUTORIAL FILM</h3>
 					<ul>
-						<li>프로모션기획/제작</li>
-						<li>캠페인컨셉</li>
-						<li>카피라이팅</li>
-						<li>온라인 배너 제작</li>
+						<li>바이럴필름</li>
+						<li>브랜드홍보필름</li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">FACEBOOK CAMPAIGN</h3>
 					<ul>
-						<li>프로모션기획/제작</li>
-						<li>캠페인컨셉</li>
-						<li>카피라이팅</li>
-						<li>온라인 배너 제작</li>
+						<li>브랜드페이지운영</li>
+						<li>컨텐츠제작</li>
+						<li>페이스북 광고 집행</li>
+						<li>페이스북 앱 페이지 제작</li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					<div><img src="img/service_01.png" /></div>
 					<h3 class="font-Oswald margint20">WEBSITE</h3>
 					<ul>
-						<li>프로모션기획/제작</li>
-						<li>캠페인컨셉</li>
-						<li>카피라이팅</li>
-						<li>온라인 배너 제작</li>
+						<li>웹사이트구축</li>
+						<li>반응형웹구축</li>
+						<li>모바일 웹 구축</li>
+						<li>워드프레스 사이트 제작</li>
 					</ul>
 				</div>
 			</div>
@@ -177,7 +171,6 @@
 	</div>
 	<!-- FOOTER -->
 	<div id="footer">
-		<h5 class="font-Oswald">MINI IS BIG. MINI IS ORIGINAL. MINI IS FUN.</h5>
 		<div class="container">
 			<p class="margint10">© MINIVERTISING 2013. ALL RIGHTS RESERVED.</p>
 		</div>
