--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
 	</div>
 	<!-- ABOUT -->
 	<div id="about">
-		<h1 class="sect-titles font-Oswald padt60">ABOUT</h1>
+		<h1 class="sect-titles font-Oswald padt80">ABOUT</h1>
 		<div class="container margint60">
 			<div class="row col-sm-6">
 				<h3>WHY MINIVERTISING?</h3>
@@ -67,8 +67,7 @@
 		<div class="about-parallax font-Oswald">
 			<div class="container margint70">
 				<p class="qtext">
-					WE FOCUS ON CONTENT. <br>
-					IT IS NEW ADVERTISING.
+					FOCUS ON CONTENT.
 				</p>
 				
 			</div>
@@ -77,7 +76,7 @@
 	</div>
 	<!-- SERVICES -->
 	<div id="services">	
-		<h1 class="sect-titles font-Oswald padt60">SERVICE</h1>
+		<h1 class="sect-titles font-Oswald padt80">SERVICE</h1>
 		<p class="sub_title">디자인 제작과 PD프러덕션 서비스를 통합해 <br>커뮤니케이션 기획부터 최종 제작까지 토탈서비스를 제공합니다.</p>
 
 		<div class="container margint70">
@@ -132,8 +131,8 @@
 	</div>
 	<!-- PORTFOLIO -->
 	<div id="portfolio" class="alt-portfolio">
-		<h1 class="sect-titles font-Oswald padt60">WORK</h1>
-		<div class="work-list margint60 padb60">
+		<h1 class="sect-titles font-Oswald padt80">WORK</h1>
+		<div class="work-list margint60">
 			<ul class="clearfix">
         <%= render partial: "project", collection: @projects %>
 			</ul>
@@ -144,7 +143,7 @@
 	<!-- FEATURES -->
 	<!-- CONTACT -->
 	<div id="contact">
-		<h1 class="sect-titles font-Oswald padt60">CONTACT</h1>
+		<h1 class="sect-titles font-Oswald padt80">CONTACT</h1>
 
 		<div class="container padb60">
 			
