--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,11 +1,13 @@
 <div id="wrapper">
 	<div class="container pos-center projects">
-    <%# if is_mobile? %>
+    <% if is_mobile? %>
       <div class="close_button">
-        <img src="/img/prjct-close.png"/>
+        <%= link_to home_path do %>
+          <img src="/img/prjct-close.png"/>
+        <% end %>
       </div>
-    <%# end %>
-		<h2 class="font-Oswald margint60"><%= @project.title %></h2>
+    <% end %>
+		<h2 class="font-Oswald margint30"><%= @project.title %></h2>
 		<p class="margint5"><%= @project.sub_title %></p>
 		<div class="project-slider margint20">
       <div class="slider-wrapper theme-default">
@@ -14,15 +16,12 @@
         <% else %>
           <div id="project-slider-wrapper" class="nivoSlider">
         <% end %>
-            <% unless @project.project_pictures.empty? %>
-              <% @project.project_pictures.each do |picture| %>
-                <%= image_tag picture.project_big.url, class: "img-responsive" %>
-              <% end %>
+          <% unless @project.project_pictures.empty? %>
+            <% @project.project_pictures.each do |picture| %>
+              <%= image_tag picture.project_big.url, class: "img-responsive" %>
             <% end %>
-          </div>
-        
-        
-        
+          <% end %>
+        </div>
       </div>
 		</div>
 		<div class="row margint50 pos-left project-info-box">
