--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,8 +58,20 @@ body {
 	width: 100%;
 	height: auto;
 }
+a.email-address,
+a.email-address:hover,
+a.address,
+a.address:hover,
+a.telephone, 
+a.telephone:hover{
+  color: #555;
+  text-decoration: none;
+}
 
-
+div.close_button{
+  margin-top: 10px;
+  text-align: right;
+}
 .animated-area {
 	overflow: hidden;
 }
@@ -1671,7 +1683,8 @@ ul.contact_detail li{
 	outline: 0 !important;
 	margin-right: -10px;
 }
-a.submit-button:hover {
+a.submit-button:hover,
+a.submit-button:focus {
   text-decoration: none;
   color: #000;
 }
