--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -152,8 +152,8 @@
 				<div class="col-lg-3 col-sm-6">
 					<h3 class="font-Oswald margint20">ADDRESS</h3>
 					<a href="http://dmaps.kr/gx25" class="address" target="_blank">
-            <p>서울특별시 서초구 방배동 856-1</p>
-          </a>
+                       <p>서울특별시 서초구 방배동 856-1</p>
+                    </a>
 				</div>
 				<div class="col-lg-3 col-sm-6">
 					<h3 class="font-Oswald margint20">PHONE / FAX</h3>
@@ -162,10 +162,10 @@
 				<div class="col-lg-3 col-sm-6">
 					<h3 class="font-Oswald margint20">MAIL</h3>
 					<a href="mailto:contact@minivertising.kr" class="email-address">
-            <p>contact@minivertising.kr</p>
-          </a>
+                     <p>contact@minivertising.kr</p>
+                    </a>
 				</div>
-				<div class="col-lg-3 col-sm-6">
+				<div class="col-lg-3 col-sm-6" style="display:none;">
 					<h3 class="font-Oswald margint20">PROJECT</h3>
 					<p>
             <% if is_mobile? %>
